--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
 
               <div class="recommend">
                 <p class="recommend__count">
-                  Lucy and 3 other friends recommend this hotel.
+                  Lucy and 3 other friends recommended this hotel.
                 </p>
 
-                <div class="recommend__friend">
+                <div class="recommend__friends">
                   <img
                     src="img/user-3.jpg"
                     alt="friend 1"
